fixed again (not showing on mobile?)

--- a/de_styles.css
+++ b/de_styles.css
@@ -180,7 +180,7 @@ span {
     margin-bottom: auto;
 }
 
-.s-text {
+.card-text {
     color: var(--bg);
     margin: auto;
     text-align: center;
